email bug, space bug, align bug

--- a/src/main/webapp/resources/css/user.css
+++ b/src/main/webapp/resources/css/user.css
@@ -75,14 +75,15 @@
 }
 
 .container1{
-    position: relative;
+    position: absolute;
     width: 100%;
     height:100%;
-    margin-left: 25px;
+    margin-left: 13%;
+    
 }
 
 .container2{
-    position: relative;
+    position: absolute;
     height: 100%;
     width: 100%;
     margin-top: 80px;
